# falcon

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  deploy.yaml  security.yaml  styles.yml  tests.yml
base/: admin.py  models.py
base/migrations/: 0001_initial.py  0002_alter_settings_options_settings_created_on_and_more.py  0003_alter_settings_json_val.py
base/templatetags/: base_extras.py
cart/: cart.py  context_processors.py  urls.py  views.py
cart/templates/cart/: cart_detail.html
cart/tests/: test_cart.py  test_views.py
companies/: admin.py  factories.py  mixins.py  models.py  samples.py  sitemaps.py  urls.py  views.py
companies/management/commands/: setup_company_data.py
companies/migrations/: 0001_initial.py  0002_alter_company_options_alter_company_slug.py  0003_company_owner.py  0004_seatchart.py  0005_alter_company_address_alter_company_description_and_more.py  0005_alter_seatchart_slug.py  0006_alter_seatchart_options.py  0007_alter_company_name.py  0008_alter_seatchart_json.py
companies/templates/companies/: company_agency_detail.html  company_agency_list.html  company_book.html  company_detail.html  company_help.html  company_landing.html  company_list.html  company_order_list.html  dashboard.html  live_status.html  manage_trip_delete.html  passengers.html  (+5 more)
companies/tests/: test_models.py  test_views.py
config/dev/: gunicorn.conf.py  nginx.conf
config/prod/: gunicorn.conf.py  nginx.conf
coupons/: admin.py  factories.py  forms.py  managers.py  models.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_active_alter_coupon_code_and_more.py  0003_alter_coupon_code.py  0004_alter_coupon_options.py  0005_alter_coupon_options.py  0006_alter_coupon_active_alter_coupon_code_and_more.py  0007_alter_coupon_options.py
coupons/tests/: test_forms.py  test_managers.py  test_models.py  test_views.py
main/: decorators.py  settings.py  tests.py  urls.py  username_blacklist.py  wa.py
main/tests/: test_functional.py  test_smoke.py
orders/: admin.py  drawers.py  factories.py  forms.py  models.py  services.py  urls.py  validators.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_passenger_options_passenger_created_on_and_more.py  0002_initial.py  0003_orderitem_seats.py  0003_remove_passenger_order_item_passenger_order.py  0004_order_payment_id_alter_passenger_birth_date.py  0004_passenger_birth_date_not_in_future.py  0004_passenger_trip.py  0005_alter_order_email.py  0005_order_coupon_order_discount.py  0006_alter_order_email_alter_order_name_and_more.py  0007_alter_order_options_alter_orderitem_options_and_more.py  0008_alter_orderitem_trip.py  0009_orderitem_destination_orderitem_origin.py  0010_alter_passenger_gender.py  0011_alter_passenger_document_number.py
orders/tests/: test_drawers.py  test_forms.py  test_models.py  test_services.py  test_validators.py  test_views.py
pages/: forms.py  sitemaps.py  urls.py  views.py
pages/tests/: test_admin.py  test_forms.py  test_home.py  test_views.py
payments/: admin.py  models.py  modo.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_modotoken.py
payments/tests/: test_commands.py  test_functional.py  test_models.py  test_modo.py  test_views.py  utils.py
reqs/: ckan.rest  datos-gob-ar.rest  georef.rest  meili.rest  server.rest  test.rest
scripts/: archive.sh
templates/: 403.html  404.html  500.html  robots.txt
templates/account/: account_inactive.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verification_sent.html
templates/admin/: base.html
templates/includes/: alert.html  filters.html  footer-grand.html  footer.html  header-hero.html  navigation-floating.html  navigation-light.html  navigation-transparent.html  navigation.html  offcanvas-calendar.html  pagination.html  right-sidebar.html  search.html  seat_modal.html  sessions.html  sidebar.html  toast.html  trip_summary.html
templates/layouts/: base-account.html  base-app.html  base-company.html  base-fullscreen.html  base-hero.html  base-pages.html  base-sidebar.html  base.html  index.html
templates/socialaccount/: connections.html  login.html  signup.html
templates/users/: profile.html
trips/: admin.py  exceptions.py  factories.py  fields.py  forms.py  location_urls.py  managers.py  models.py  seat_map.py  sitemaps.py  terminals.py  urls.py  views.py
trips/migrations/: 0001_initial.py  0001_squashed_0011_alter_location_options_alter_route_options_and_more.py  0002_alter_trip_price.py  0002_remove_trip_price_seat.py  0003_alter_trip_options.py  0003_remove_trip_seats_available.py  0004_alter_seat_unique_together.py  0004_remove_trip_available.py  0005_alter_location_options_location_address_line1_and_more.py  0005_remove_seat_price_trip_price.py  0006_alter_trip_destination_alter_trip_origin.py  0007_route.py  0008_stop.py  0009_route_category.py  0010_alter_route_duration.py  0011_alter_location_options_alter_route_options_and_more.py  0012_trip_route.py  0013_trip_schedule.py  0014_alter_trip_schedule.py  0015_remove_stop_arrival_remove_stop_departure.py  0016_stop_arrival_stop_departure.py  0017_alter_location_abbr.py  0018_remove_route_price.py  0019_price.py  0020_alter_price_unique_together.py  0021_alter_price_unique_together.py  0022_remove_route_category.py  0023_trip_category.py  0024_remove_trip_price.py  0025_alter_seat_passenger.py  0026_seat_order_item.py  0027_alter_location_state.py  0028_alter_stop_name.py
trips/templatetags/: trips_extras.py
trips/tests/: test_commands.py  test_forms.py  test_managers.py  test_models.py  test_views.py
users/: adapter.py  admin.py  apps.py  factories.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_bio_customuser_location_and_more.py  0003_alter_customuser_location.py
users/tests/: test_adapters.py  test_forms.py  test_models.py  test_views.py
(+100 files in other folders)
