[tool.poetry]
name = "falcon"
version = "0.1.0"
description = "Bus booking website"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
isort = "^5.10.1"
bandit = "^1.7.4"
safety = "^2.3.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
django-extensions = "^3.2.1"
django-allauth = "^0.54.0"
coverage = "^6.5.0"
factory-boy = "^3.2.1"
sentry-sdk = "^1.10.1"
pillow = "^10.3.0"
psycopg2 = "^2.9.5"
mercadopago = "^2.2.0"
stripe = "^5.0.0"
django-countries = "^7.5"
weasyprint = "^61.2"
django-simple-captcha = "^0.5.17"
django-qr-code = "^3.1.1"
parameterized = "^0.8.1"
django = "^5.0"
django-weasyprint = "^2.3.0"


[tool.poetry.group.dev.dependencies]
djlint = "^1.19.7"
ipython = "^8.23.0"
selenium = "^4.19.0"
django-debug-toolbar = "^4.3.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = [
    "*migrations*",
    ]

[tool.isort]
profile = "black"
skip = ["docs", "migrations"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.djlint]
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
blank_line_before_tag = "load,extends,include,block,blocktranslate"
blank_line_after_tag = "load,extends,include,endblock,endblocktranslate"
profile = "django"
max_line_length = 120
max_attribute_length = 120
use_gitignore = true
format_attribute_template_tags = true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "main/asgi.py",
    "main/wsgi.py",
    "main/settings.py",
    "manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true
