[tool.poetry]
name = "falcon"
version = "0.1.0"
description = "Bus booking website"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
django-extensions = "^3.2.1"
coverage = "^6.5.0"
factory-boy = "^3.2.1"
pillow = "^10.3.0"
psycopg2 = "^2.9.5"
mercadopago = "^2.2.0"
stripe = "^5.0.0"
django-countries = "^7.5"
django-simple-captcha = "^0.5.17"
parameterized = "^0.8.1"
django = "^5.0"
django-weasyprint = "^2.3.0"
django-allauth = {extras = ["socialaccount"], version = "^0.63.3"}
sentry-sdk = "^2.16.0"
gunicorn = "^23.0.0"
weasyprint = "^62.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.19.7"
ipython = "^8.23.0"
selenium = "^4.19.0"
django-debug-toolbar = "^4.3.0"
black = "^24.4.2"
isort = "^5.13.2"
bandit = "^1.7.8"
safety = "^3.2.0"
ruff = "^0.4.10"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = [
    "*migrations*",
    ]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72


[tool.isort]
profile = "black"
skip = ["docs", "migrations", "static", "staticfiles", "media", "htmlcov"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.djlint]
blank_line_before_tag = "load,extends,include,block"
blank_line_after_tag = "load,extends,include,endblock"
close_void_tags = true
custom_block = "toc,example"
custom_html = "mjml"
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
format_attribute_template_tags = true
format_css = true
format_js = true
ignore_blocks = "raw,example"
indent = 2
max_line_length = 120
max_attribute_length = 120
profile = "django"
use_gitignore = true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "main/asgi.py",
    "main/wsgi.py",
    "main/settings.py",
    "manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true
